tests/ui/derive_pretty_printable_bad_option.rs
use hegel::PrettyPrintable;

#[derive(PrettyPrintable)]
struct Config {
    #[pretty(display)]
    name: String,
}

fn main() {}
